Corrected Classical Message Passing and started with basics of Streams & Lambdas